Todo icons: - Use defaults for missing icons - Prevent wrapping

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -599,6 +599,7 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
 	position: absolute;
 	top: 2em;
 	bottom: 8px;
+	width: 100%;
 }
 .calendar_calDayTodos {
 	width: 98%;
@@ -607,6 +608,9 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
 }
 .calendar_calDayTodosHeader {
 	text-align: center;
+}
+.calendar_calDayTodosTable tr td span:first-child {
+	white-space: nowrap;
 }
 
 /******************************************************
